# mailbox

./: Cargo.toml  rustfmt.toml
src/: credentials.rs  errors.rs  imap_connection.rs  main.rs
src/fetch/: connection.rs  mod.rs  parser.rs
src/tui/: app.rs  components.rs  manual.rs  mod.rs  states.rs  writer.rs
